@@ -76,16 +76,16 @@ public class YamlObject<T> {
 
     /** Casts this object to a {@link YamlMap}. */
     public YamlMap map() {
-        if (this instanceof YamlMap) {
-            return (YamlMap) this;
+        if (this instanceof YamlMap map) {
+            return map;
         }
         throw new IllegalArgumentException("Object " + this + " is not a mapping");
     }
 
     /** Casts this object to a {@link YamlSeq}. */
     public YamlSeq seq() {
-        if (this instanceof YamlSeq) {
-            return (YamlSeq) this;
+        if (this instanceof YamlSeq seq) {
+            return seq;
         }
         throw new IllegalArgumentException("Object " + this + " is not a sequence");
     }
@@ -128,8 +128,7 @@ public class YamlObject<T> {
             } catch (NumberFormatException nan) {
                 index = -1;
             }
-            if (here instanceof YamlMap) {
-                YamlMap map = (YamlMap) here;
+            if (here instanceof YamlMap map) {
                 if (index != -1) {
                     String tempKey = map.key(index);
                     here = map.get(tempKey);
@@ -138,8 +137,7 @@ public class YamlObject<T> {
                 } else {
                     throw new NoSuchElementException("Key: " + key + ", Keys: " + map.raw.keySet());
                 }
-            } else if (here instanceof YamlSeq) {
-                YamlSeq list = (YamlSeq) here;
+            } else if (here instanceof YamlSeq list) {
                 if (index != -1) {
                     here = list.get(index);
                 } else {
@@ -175,8 +173,7 @@ public class YamlObject<T> {
         try {
             return clazz.cast(obj);
         } catch (ClassCastException e) {
-            throw new IllegalStateException(
-                    String.format("Unable to retrieve %s as %s", obj, clazz.getSimpleName()), e);
+            throw new IllegalStateException("Unable to retrieve %s as %s".formatted(obj, clazz.getSimpleName()), e);
         }
     }
 
